Cleaning up repo.

--- a/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Dataset.ipynb
+++ b/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Dataset.ipynb
@@ -4,21 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First things first"
+    "# Background"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the data from: https://s3.amazonaws.com/soundflux-urbansounds/curated_4_class_bundle.zip"
+    "The urbansounds dataset proved to be very noisy. A lot of the classes were either irrelevant to our work or too similar for spectrograms to be distinguishable.\n",
+    "\n",
+    "We decided to narrow the focus of our modelling efforts by selecting a few categories that could be relevant to the task at hand.\n",
+    "\n",
+    "As such we selected a few classes from the FSD project - https://zenodo.org/record/2552860#.XIG9LMtKg5l and of course or own SoundFlux dataset."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create image generators"
+    "As of March 7th, the classes used are as followes:\n",
+    "\n",
+    "- Falling Dummy (simulated human falls from Rescue Randy) from SoundFlux\n",
+    "- General noise from SoundFlux\n",
+    "- Telephone - from FSD\n",
+    "- Laughter - from FSD\n",
+    "- Knock - from FSD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the data from: https://s3.amazonaws.com/soundflux-urbansounds/curated_4_class_bundle.zip (should be named '5 class bundle' ... will rename at some point)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the data and training the model"
    ]
   },
   {
@@ -134,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Doing K-Folds"
+    "# Defining relevant parameters"
    ]
   },
   {
@@ -157,13 +181,6 @@
    "source": [
     "train_folder = \"/home/nvidia/bundle/split/train/\"\n",
     "test_folder = \"/home/nvidia/bundle/split/test/\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MODEL"
    ]
   },
   {
@@ -208,29 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next ideas:\n",
-    "\n",
-    "- Add filters on time with strides! 2,1 convolutions with padding and a gap\n",
-    "- Keep at least a good 64 channels open?\n",
-    "- Sum pooling instead of averaging?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# try \n",
-    "\n",
-    "keras.applications.densenet.DenseNet121 next"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Adding a few more layers\n",
-    "- More epochs\n",
-    "- Measure confusion, top class, etc"
+    "# Actual Model"
    ]
   },
   {
@@ -301,25 +296,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**LSTM Sizing**\n",
-    "This is helpful when understanding sizing\n",
-    "https://stackoverflow.com/questions/50242925/data-preprocessing-input-shape-for-timedistributed-cnn-lrcn-convlstm2d-for?rq=1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Explore**\n",
-    "- Should also be returning state?\n",
-    "- Should also flip sizing? (channel representation should be 3 instead of the height?)\n",
-    "- Run another LSTM from top to bottom to traverse from the spectrums/frequency bands from lower to higher!?!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Data Generator"
    ]
   },
@@ -339,13 +315,6 @@
     "                                           batch_size=batch_size,\n",
     "                                           img_height=img_height,\n",
     "                                           img_width=img_width)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://towardsdatascience.com/image-detection-from-scratch-in-keras-f314872006c9"
    ]
   },
   {
@@ -487,6 +456,14 @@
    "source": [
     "model.save_weights('curated_model_v1.h5')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model weights were saved on the very first run of this model and ara available here: \n",
+    "https://s3.amazonaws.com/soundflux-urbansounds/curated_model_v1.zip"
+   ]
   }
  ],
  "metadata": {
@@ -505,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
