Minor changes to unfreeze certain layers

--- a/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Dataset.ipynb
+++ b/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Dataset.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,14 +230,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_model = keras.applications.vgg16.VGG16(weights='imagenet', \n",
     "                                include_top=False, \n",
-    "                                input_shape=(img_height, img_width,3))\n",
-    "base_model.trainable = False\n",
+    "                                input_shape=(img_height, img_width,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(base_model.layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#base_model.trainable = False\n",
+    "for layer in base_model.layers[:15]:\n",
+    "    layer.trainable = False\n",
+    "\"\"\"   #Adding custom Layers\n",
+    "   x = model.output\n",
+    "   x = Flatten()(x)\n",
+    "   x = Dense(4096, activation=\"relu\")(x)\n",
+    "   x = Dropout(0.5)(x)\n",
+    "   x = Dense(4096, activation=\"relu\")(x)\n",
+    "   x = Dropout(0.5)(x)\n",
+    "\"\"\"\n",
     "model = keras.models.Sequential()\n",
     "model.add(base_model)\n",
     "model.add(keras.layers.GlobalAveragePooling2D())\n",
@@ -250,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -275,14 +313,14 @@
       "dense_3 (Dense)              (None, 5)                 165       \n",
       "=================================================================\n",
       "Total params: 15,012,421\n",
-      "Trainable params: 297,733\n",
-      "Non-trainable params: 14,714,688\n",
+      "Trainable params: 7,377,157\n",
+      "Non-trainable params: 7,635,264\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "opt = optimizers.RMSprop(lr=0.001)\n",
+    "opt = optimizers.RMSprop(lr=0.0001,decay=1e-3)\n",
     "#opt = optimizers.Adam(lr=0.001)\n",
     "model.compile(loss='categorical_crossentropy', \n",
     "              optimizer=opt,\n",
@@ -301,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -328,68 +366,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/30\n",
+      "Epoch 1/20\n",
       "Found 432 images belonging to 5 classes.\n",
-      "31/31 [============================>.] - ETA: 0s - loss: 1.4815 - acc: 0.3085Found 144 images belonging to 5 classes.\n",
-      "32/31 [==============================] - 68s 2s/step - loss: 1.4758 - acc: 0.3145 - val_loss: 1.2060 - val_acc: 0.5431\n",
-      "Epoch 2/30\n",
-      "32/31 [==============================] - 50s 2s/step - loss: 1.1306 - acc: 0.5283 - val_loss: 0.9084 - val_acc: 0.7050\n",
-      "Epoch 3/30\n",
-      "32/31 [==============================] - 51s 2s/step - loss: 0.9128 - acc: 0.6329 - val_loss: 0.7233 - val_acc: 0.7446\n",
-      "Epoch 4/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.7878 - acc: 0.7207 - val_loss: 0.7354 - val_acc: 0.7226\n",
-      "Epoch 5/30\n",
-      "32/31 [==============================] - 51s 2s/step - loss: 0.7413 - acc: 0.7177 - val_loss: 0.6249 - val_acc: 0.7672\n",
-      "Epoch 6/30\n",
-      "32/31 [==============================] - 50s 2s/step - loss: 0.6603 - acc: 0.7461 - val_loss: 0.5091 - val_acc: 0.8297\n",
-      "Epoch 7/30\n",
-      "32/31 [==============================] - 50s 2s/step - loss: 0.6061 - acc: 0.7627 - val_loss: 0.6030 - val_acc: 0.7566\n",
-      "Epoch 8/30\n",
-      "32/31 [==============================] - 51s 2s/step - loss: 0.5879 - acc: 0.7939 - val_loss: 0.4603 - val_acc: 0.8265\n",
-      "Epoch 9/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.5210 - acc: 0.8123 - val_loss: 0.4902 - val_acc: 0.8190\n",
-      "Epoch 10/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.5112 - acc: 0.8212 - val_loss: 0.4887 - val_acc: 0.8235\n",
-      "Epoch 11/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.4524 - acc: 0.8535 - val_loss: 0.4539 - val_acc: 0.8502\n",
-      "Epoch 12/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.4155 - acc: 0.8632 - val_loss: 0.3898 - val_acc: 0.8534\n",
-      "Epoch 13/30\n",
-      "32/31 [==============================] - 50s 2s/step - loss: 0.4071 - acc: 0.8652 - val_loss: 0.4272 - val_acc: 0.8465\n",
-      "Epoch 14/30\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.4001 - acc: 0.8740 - val_loss: 0.5732 - val_acc: 0.8050\n",
-      "Epoch 15/30\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.3896 - acc: 0.8692 - val_loss: 0.4354 - val_acc: 0.8556\n",
-      "Epoch 16/30\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.3475 - acc: 0.8847 - val_loss: 0.5352 - val_acc: 0.7971\n",
-      "Epoch 17/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.3410 - acc: 0.8857 - val_loss: 0.4962 - val_acc: 0.8330\n",
-      "Epoch 18/30\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.3509 - acc: 0.8760 - val_loss: 0.4168 - val_acc: 0.8750\n",
-      "Epoch 19/30\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.2993 - acc: 0.8935 - val_loss: 0.5974 - val_acc: 0.8092\n",
-      "Epoch 20/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.3325 - acc: 0.9023 - val_loss: 0.4065 - val_acc: 0.8599\n",
-      "Epoch 21/30\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.2510 - acc: 0.9171 - val_loss: 0.6098 - val_acc: 0.8276\n",
-      "Epoch 22/30\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.2687 - acc: 0.9141 - val_loss: 0.3732 - val_acc: 0.8772\n",
-      "Epoch 23/30\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.2686 - acc: 0.9121 - val_loss: 0.4342 - val_acc: 0.8448\n",
-      "Epoch 24/30\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.2577 - acc: 0.9150 - val_loss: 0.4812 - val_acc: 0.8438\n",
-      "Epoch 25/30\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.2660 - acc: 0.9112 - val_loss: 0.5980 - val_acc: 0.8344\n",
-      "Epoch 26/30\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.2107 - acc: 0.9413 - val_loss: 0.4933 - val_acc: 0.8534\n",
-      "Epoch 27/30\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.2667 - acc: 0.9141 - val_loss: 0.5490 - val_acc: 0.8103\n",
-      "Epoch 28/30\n",
-      "32/31 [==============================] - 47s 1s/step - loss: 0.2816 - acc: 0.9005 - val_loss: 0.4180 - val_acc: 0.8695\n",
-      "Epoch 29/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.2069 - acc: 0.9444 - val_loss: 0.4912 - val_acc: 0.8599\n",
-      "Epoch 30/30\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.1844 - acc: 0.9327 - val_loss: 0.5418 - val_acc: 0.8534\n"
+      "31/31 [============================>.] - ETA: 0s - loss: 1.2070 - acc: 0.4859Found 144 images belonging to 5 classes.\n",
+      "32/31 [==============================] - 74s 2s/step - loss: 1.2054 - acc: 0.4862 - val_loss: 0.8299 - val_acc: 0.7144\n",
+      "Epoch 2/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.7815 - acc: 0.7002 - val_loss: 0.4865 - val_acc: 0.8454\n",
+      "Epoch 3/20\n",
+      "32/31 [==============================] - 53s 2s/step - loss: 0.5555 - acc: 0.8086 - val_loss: 0.4244 - val_acc: 0.8351\n",
+      "Epoch 4/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.4786 - acc: 0.8477 - val_loss: 0.2797 - val_acc: 0.9200\n",
+      "Epoch 5/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.3904 - acc: 0.8681 - val_loss: 0.5339 - val_acc: 0.8384\n",
+      "Epoch 6/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.3374 - acc: 0.8954 - val_loss: 0.3015 - val_acc: 0.9041\n",
+      "Epoch 7/20\n",
+      "32/31 [==============================] - 51s 2s/step - loss: 0.2572 - acc: 0.9111 - val_loss: 0.4473 - val_acc: 0.8794\n",
+      "Epoch 8/20\n",
+      "32/31 [==============================] - 53s 2s/step - loss: 0.2663 - acc: 0.9150 - val_loss: 0.3202 - val_acc: 0.9095\n",
+      "Epoch 9/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.2270 - acc: 0.9277 - val_loss: 0.2839 - val_acc: 0.9052\n",
+      "Epoch 10/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.2014 - acc: 0.9395 - val_loss: 0.3318 - val_acc: 0.9090\n",
+      "Epoch 11/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.1761 - acc: 0.9454 - val_loss: 0.3410 - val_acc: 0.9213\n",
+      "Epoch 12/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.1586 - acc: 0.9434 - val_loss: 0.3124 - val_acc: 0.9138\n",
+      "Epoch 13/20\n",
+      "32/31 [==============================] - 51s 2s/step - loss: 0.1832 - acc: 0.9541 - val_loss: 0.4695 - val_acc: 0.8761\n",
+      "Epoch 14/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.1122 - acc: 0.9560 - val_loss: 0.4821 - val_acc: 0.8804\n",
+      "Epoch 15/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.1320 - acc: 0.9580 - val_loss: 0.4384 - val_acc: 0.8869\n",
+      "Epoch 16/20\n",
+      "32/31 [==============================] - 51s 2s/step - loss: 0.0989 - acc: 0.9668 - val_loss: 0.2908 - val_acc: 0.9265\n",
+      "Epoch 17/20\n",
+      "32/31 [==============================] - 52s 2s/step - loss: 0.1119 - acc: 0.9658 - val_loss: 0.3652 - val_acc: 0.9170\n",
+      "Epoch 18/20\n",
+      "32/31 [==============================] - 51s 2s/step - loss: 0.1170 - acc: 0.9668 - val_loss: 0.3624 - val_acc: 0.9300\n",
+      "Epoch 19/20\n",
+      "32/31 [==============================] - 51s 2s/step - loss: 0.0855 - acc: 0.9668 - val_loss: 0.3749 - val_acc: 0.9200\n",
+      "Epoch 20/20\n",
+      "31/31 [============================>.] - ETA: 0s - loss: 0.0825 - acc: 0.9708"
      ]
     }
    ],
@@ -401,9 +419,16 @@
     "                          steps_per_epoch=approx_fold_size/batch_size,\n",
     "                          validation_data = test_generator,\n",
     "                          validation_steps = approx_fold_size/batch_size,\n",
-    "                          epochs=30,\n",
+    "                          epochs=20,\n",
     "                          shuffle=True, \n",
     "                          verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Best so far -> lr = 0.0001, decay=1e-3, 13 epochs. Filal val accuracy = 92, loss = 0.4309"
    ]
   },
   {
@@ -415,28 +440,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 144 images belonging to 5 classes.\n",
-      "32/31 [==============================] - 26s 827ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.6174462766482912, 0.84375]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_generator = generate_generator_multiple(generator=datagen,\n",
     "                                           directories = [test_folder],\n",
@@ -450,11 +456,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights('curated_model_v1.h5')"
+    "model.save_weights('curated_model_v1_unfrozen_layers.h5')"
    ]
   },
   {
@@ -482,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
