Minor tweaks to model

--- a/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Three Class Dataset.ipynb
+++ b/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Three Class Dataset.ipynb
@@ -439,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -481,11 +483,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_json = model.to_json()\n",
+    "with open(\"curated_model_three_classes_unfrozen_layers_v1.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_json)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The model weights were saved on the very first run of this model and ara available here: \n",
-    "https://s3.amazonaws.com/soundflux-urbansounds/curated_model_v1.zip"
+    "https://s3.amazonaws.com/soundflux-urbansounds/curated_model_three_classes_unfrozen_layers_v1.zip"
    ]
   }
  ],
