Minor changes to write class labels/indices

--- a/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Three Class Dataset.ipynb
+++ b/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Curated Three Class Dataset.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "                                          batch_size = batch_size,\n",
     "                                          shuffle=True, \n",
     "                                          seed=7)\n",
-    "    \n",
+    "        print(generator.class_indices)\n",
     "        generators.append(gen)\n",
     "\n",
     "    for gen in generators:\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "19"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -337,20 +337,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 291 images belonging to 3 classes.\n",
+      "Found 137 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
    "source": [
-    "train_generator = generate_generator_multiple(generator=datagen,\n",
-    "                                           directories = [train_folder],\n",
-    "                                           batch_size=batch_size,\n",
-    "                                           img_height=img_height,\n",
-    "                                           img_width=img_width)\n",
-    "test_generator = generate_generator_multiple(generator=datagen,\n",
-    "                                           directories = [test_folder],\n",
-    "                                           batch_size=batch_size,\n",
-    "                                           img_height=img_height,\n",
-    "                                           img_width=img_width)"
+    "train_generator = datagen.flow_from_directory(train_folder,\n",
+    "                                          target_size = (img_height,img_width),\n",
+    "                                          class_mode = 'categorical',\n",
+    "                                          batch_size = batch_size,\n",
+    "                                          shuffle=True, \n",
+    "                                          seed=7)\n",
+    "\n",
+    "test_generator = datagen.flow_from_directory(test_folder,\n",
+    "                                          target_size = (img_height,img_width),\n",
+    "                                          class_mode = 'categorical',\n",
+    "                                          batch_size = batch_size,\n",
+    "                                          shuffle=True, \n",
+    "                                          seed=7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'falling_dummy': 0, 'falling_object': 1, 'general_noise': 2}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_generator.class_indices"
    ]
   },
   {
@@ -491,6 +523,17 @@
     "model_json = model.to_json()\n",
     "with open(\"curated_model_three_classes_unfrozen_layers_v1.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"curated_model_three_classes_unfrozen_layers_v1_class_indices.json\", \"w\") as json_file:\n",
+    "    train_generator.class_indices\n",
+    "    json_file.write(json.dumps(train_generator.class_indices))"
    ]
   },
   {
