Other eval metrics

--- a/Transfer Learning Notebooks/Evaluating Model Performance - Curated Dataset.ipynb
+++ b/Transfer Learning Notebooks/Evaluating Model Performance - Curated Dataset.ipynb
@@ -43,7 +43,7 @@
     "import pandas as pd\n",
     "from keras.models import model_from_json\n",
     "import numpy as np\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from sklearn.metrics import confusion_matrix, classification_report"
    ]
   },
   {
@@ -223,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -248,6 +250,35 @@
     "plt.ylabel('True label')\n",
     "plt.xlabel('Predicted label')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report\n",
+      "                precision    recall  f1-score   support\n",
+      "\n",
+      " falling_dummy       0.84      0.96      0.90        27\n",
+      "falling_object       0.97      0.94      0.95        64\n",
+      " general_noise       0.98      0.93      0.96        46\n",
+      "\n",
+      "     micro avg       0.94      0.94      0.94       137\n",
+      "     macro avg       0.93      0.95      0.93       137\n",
+      "  weighted avg       0.95      0.94      0.94       137\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Classification Report')\n",
+    "print(classification_report(test_generator.classes, y_pred, \n",
+    "                            target_names = test_generator.class_indices.keys()))"
    ]
   }
  ],
