Preparing for training model in augmented dataset, plus adding instructions on how to get the datasets

--- a/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Augmented Three Class Dataset.ipynb
+++ b/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Augmented Three Class Dataset.ipynb
@@ -15,25 +15,25 @@
     "\n",
     "We decided to narrow the focus of our modelling efforts by selecting a few categories\n",
     "\n",
-    "This specific model uses three classes collected by the soundflux team"
+    "This specific model uses two classes collected by the soundflux team. These classes (falling_dummy and falling_object) were augmented by overlaying them with random samples of seven different audio clips, ranging from a group talking in the background to the sound of running water in a shower. The idea was to make the model generalize well under unseen data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As of March 28th, the classes used are as followes:\n",
+    "As of April 12th, the classes used are as follows:\n",
     "\n",
-    "- Falling Dummy (simulated human falls from Rescue Randy) from SoundFlux\n",
-    "- General noise from SoundFlux\n",
-    "- Falling Object (semi-bouncy object falling)"
+    "- Falling Dummy (simulated human falls from Rescue Randy) from SoundFlux plus all the augmented iterations\n",
+    "- Overlay noise from SoundFlux used to augment\n",
+    "- Falling Object (semi-bouncy object falling) plus all the augmented iterations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the data from: https://s3.amazonaws.com/soundflux-urbansounds/curated_soundflux_three_classes.zip"
+    "Get the data from: https://s3.amazonaws.com/soundflux-urbansounds/soundflux_augmented_three_class_dataset.zip"
    ]
   },
   {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,17 +177,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_folder = \"/home/nvidia/curated_soundflux_three_classes/train/\"\n",
-    "test_folder = \"/home/nvidia/curated_soundflux_three_classes/test/\""
+    "train_folder = \"/home/nvidia/Downloads/soundflux_augmented/spectrograms/split/train/\"\n",
+    "test_folder = \"/home/nvidia/Downloads/soundflux_augmented/spectrograms/split/test/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "datagen = ImageDataGenerator(rescale=1./255,\n",
+    "curated_soundflux_three_classesdatagen = ImageDataGenerator(rescale=1./255,\n",
     "                            #rotation_range=10,\n",
     "                            width_shift_range=0.2,\n",
     "                            height_shift_range=0.1,\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "19"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,9 +266,9 @@
     "#base_model.trainable = False\n",
     "for layer in base_model.layers[:15]:\n",
     "    layer.trainable = False\n",
-    "\"\"\"   #Adding custom Layers\n",
-    "   x = model.output\n",
-    "   x = Flatten()(x)\n",
+    "                                                                                    \"\"\"   #Adding custom Layers\n",
+    "                                                                                       x = model.output\n",
+    "                                                                                       x = Flatten()(x)\n",
     "   x = Dense(4096, activation=\"relu\")(x)\n",
     "   x = Dropout(0.5)(x)\n",
     "   x = Dense(4096, activation=\"relu\")(x)\n",
