--- a/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Augmented Three Class Dataset.ipynb
+++ b/Transfer Learning Notebooks/Training From VGG16 - Spectrogram - Augmented Three Class Dataset.ipynb
@@ -74,7 +74,8 @@
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "import matplotlib.pyplot as plt\n",
     "import json\n",
-    "from PIL import Image"
+    "from PIL import Image, ImageFile\n",
+    "ImageFile.LOAD_TRUNCATED_IMAGES = True"
    ]
   },
   {
@@ -83,30 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_generator_multiple(generator,directories, batch_size, img_height,img_width):\n",
-    "    generators =[]\n",
-    "    for directory in directories:\n",
-    "        gen = generator.flow_from_directory(directory,\n",
-    "                                          target_size = (img_height,img_width),\n",
-    "                                          class_mode = 'categorical',\n",
-    "                                          batch_size = batch_size,\n",
-    "                                          shuffle=True, \n",
-    "                                          seed=7)\n",
-    "        print(generator.class_indices)\n",
-    "        generators.append(gen)\n",
-    "\n",
-    "    for gen in generators:\n",
-    "        for data, labels in gen:\n",
-    "            yield data, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_plots(history,target_file_acc,target_file_loss):\n",
+    "\"/media/romulo/6237-3231/curated_soundflux_three_classes/test\"def save_plots(history,target_file_acc,target_file_loss):\n",
     "    # summarize history for accuracy\n",
     "    plt.plot(history.history['acc'])\n",
     "    plt.plot(history.history['val_acc'])\n",
@@ -129,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,19 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 32\n",
     "img_height=80\n",
     "img_width = 256\n",
-    "approx_fold_size = 1000"
+    "approx_fold_size = 9000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_soundflux_three_classesdatagen = ImageDataGenerator(rescale=1./255,\n",
+    "datagen = ImageDataGenerator(rescale=1./255,\n",
     "                            #rotation_range=10,\n",
     "                            width_shift_range=0.2,\n",
     "                            height_shift_range=0.1,\n",
@@ -200,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +226,7 @@
        "19"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,20 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#base_model.trainable = False\n",
     "for layer in base_model.layers[:15]:\n",
     "    layer.trainable = False\n",
-    "                                                                                    \"\"\"   #Adding custom Layers\n",
-    "                                                                                       x = model.output\n",
-    "                                                                                       x = Flatten()(x)\n",
-    "   x = Dense(4096, activation=\"relu\")(x)\n",
-    "   x = Dropout(0.5)(x)\n",
-    "   x = Dense(4096, activation=\"relu\")(x)\n",
-    "   x = Dropout(0.5)(x)\n",
+    "\"\"\"   #Adding custom Layers\n",
     "\"\"\"\n",
     "model = keras.models.Sequential()\n",
     "model.add(base_model)\n",
@@ -286,8 +258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -324,7 +298,6 @@
     "              optimizer=opt,\n",
     "              metrics=['accuracy'])\n",
     "#needed to reset weigh\"\"\"ts!\n",
-    "model.save_weights('raw_model.h5')\n",
     "model.summary()"
    ]
   },
@@ -337,15 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 291 images belonging to 3 classes.\n",
-      "Found 137 images belonging to 3 classes.\n"
+      "Found 15861 images belonging to 3 classes.\n",
+      "Found 4976 images belonging to 3 classes.\n"
      ]
     }
    ],
@@ -367,16 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'falling_dummy': 0, 'falling_object': 1, 'general_noise': 2}"
+       "{'falling_dummy': 0, 'falling_object': 1, 'overlay_noise': 2}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -397,47 +370,9 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "Found 291 images belonging to 3 classes.\n",
-      "31/31 [============================>.] - ETA: 0s - loss: 0.7801 - acc: 0.6418Found 137 images belonging to 3 classes.\n",
-      "32/31 [==============================] - 73s 2s/step - loss: 0.7704 - acc: 0.6477 - val_loss: 0.4692 - val_acc: 0.7946\n",
+      "282/281 [==============================] - 352s 1s/step - loss: 0.3381 - acc: 0.8633 - val_loss: 0.1059 - val_acc: 0.9590\n",
       "Epoch 2/20\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.4353 - acc: 0.8338 - val_loss: 0.3396 - val_acc: 0.8760\n",
-      "Epoch 3/20\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.3305 - acc: 0.8802 - val_loss: 0.3213 - val_acc: 0.8725\n",
-      "Epoch 4/20\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.2718 - acc: 0.9086 - val_loss: 0.3139 - val_acc: 0.8899\n",
-      "Epoch 5/20\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.2589 - acc: 0.9111 - val_loss: 0.2807 - val_acc: 0.8950\n",
-      "Epoch 6/20\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.2199 - acc: 0.9298 - val_loss: 0.4367 - val_acc: 0.8725\n",
-      "Epoch 7/20\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.2115 - acc: 0.9429 - val_loss: 0.2966 - val_acc: 0.9061\n",
-      "Epoch 8/20\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.1012 - acc: 0.9667 - val_loss: 0.7459 - val_acc: 0.8634\n",
-      "Epoch 9/20\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.1075 - acc: 0.9677 - val_loss: 0.4219 - val_acc: 0.8883\n",
-      "Epoch 10/20\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.0845 - acc: 0.9745 - val_loss: 0.2217 - val_acc: 0.9432\n",
-      "Epoch 11/20\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.1036 - acc: 0.9726 - val_loss: 0.2599 - val_acc: 0.9199\n",
-      "Epoch 12/20\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.0673 - acc: 0.9834 - val_loss: 0.1955 - val_acc: 0.9447\n",
-      "Epoch 13/20\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.0697 - acc: 0.9824 - val_loss: 0.2543 - val_acc: 0.9293\n",
-      "Epoch 14/20\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.0574 - acc: 0.9863 - val_loss: 0.3095 - val_acc: 0.9300\n",
-      "Epoch 15/20\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.0785 - acc: 0.9843 - val_loss: 0.2539 - val_acc: 0.9289\n",
-      "Epoch 16/20\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.0305 - acc: 0.9882 - val_loss: 1.1564 - val_acc: 0.7729\n",
-      "Epoch 17/20\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.0666 - acc: 0.9853 - val_loss: 0.3848 - val_acc: 0.9176\n",
-      "Epoch 18/20\n",
-      "32/31 [==============================] - 49s 2s/step - loss: 0.0543 - acc: 0.9853 - val_loss: 0.3336 - val_acc: 0.9221\n",
-      "Epoch 19/20\n",
-      "32/31 [==============================] - 48s 1s/step - loss: 0.0551 - acc: 0.9912 - val_loss: 0.2163 - val_acc: 0.9432\n",
-      "Epoch 20/20\n",
-      "32/31 [==============================] - 48s 2s/step - loss: 0.0827 - acc: 0.9843 - val_loss: 0.2148 - val_acc: 0.9424\n"
+      " 63/281 [=====>........................] - ETA: 3:29 - loss: 0.1850 - acc: 0.9335"
      ]
     }
    ],
@@ -448,17 +383,10 @@
     "history = model.fit_generator(train_generator,\n",
     "                          steps_per_epoch=approx_fold_size/batch_size,\n",
     "                          validation_data = test_generator,\n",
-    "                          validation_steps = approx_fold_size/batch_size,\n",
+    "                          validation_steps = 1000/batch_size,\n",
     "                          epochs=20,\n",
     "                          shuffle=True, \n",
     "                          verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Best so far -> lr = 0.0001, decay=1e-3, 13 epochs. Filal val accuracy = 92, loss = 0.4309"
    ]
   },
   {
@@ -470,30 +398,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 137 images belonging to 3 classes.\n",
-      "32/31 [==============================] - 23s 730ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.21583733042128148, 0.9401805873783663]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_generator = generate_generator_multiple(generator=datagen,\n",
     "                                           directories = [test_folder],\n",
@@ -507,31 +416,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_weights('curated_model_three_classes_unfrozen_layers_v1.h5')"
+    "model.save_weights('augmented_model_three_classes_unfrozen_layers_v1.h5')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_json = model.to_json()\n",
-    "with open(\"curated_model_three_classes_unfrozen_layers_v1.json\", \"w\") as json_file:\n",
+    "\n",
+    "Object URL\n",
+    "https://s3.amazonaws.com/soundflux-urbansounds/augmented_three_classes_vgg16_retrained_model.zipmodel_json = model.to_json()\n",
+    "with open(\"augmented_model_three_classes_unfrozen_layers_v1.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"curated_model_three_classes_unfrozen_layers_v1_class_indices.json\", \"w\") as json_file:\n",
+    "with open(\"augmented_model_three_classes_unfrozen_layers_v1_class_indices.json\", \"w\") as json_file:\n",
     "    train_generator.class_indices\n",
     "    json_file.write(json.dumps(train_generator.class_indices))"
    ]
@@ -541,7 +452,8 @@
    "metadata": {},
    "source": [
     "The model weights were saved on the very first run of this model and ara available here: \n",
-    "https://s3.amazonaws.com/soundflux-urbansounds/curated_model_three_classes_unfrozen_layers_v1.zip"
+    "Object URL\n",
+    "https://s3.amazonaws.com/soundflux-urbansounds/augmented_three_classes_vgg16_retrained_model.zip"
    ]
   }
  ],
