--- a/Transfer Learning Notebooks/Evaluating Model V2 Performance - Stress Test Dataset.ipynb
+++ b/Transfer Learning Notebooks/Evaluating Model V2 Performance - Stress Test Dataset.ipynb
@@ -30,6 +30,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- v6: 66%\n",
+    "- v7 67%"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -63,6 +71,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- v1 performs  well on stress test\n",
+    "- v2 performs bad on stress test (uploaded to server)\n",
+    "- v3 not great (50%)\n",
+    "- v4 (88%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Load Model"
    ]
   },
@@ -72,31 +90,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/media/romulo/6237-3231/augmented_model_v2/\"\n",
-    "model_definition_location = path+\"/augmented_model_three_classes_unfrozen_layers_weighted_v2.json\"\n",
-    "model_weights_location = path+\"/augmented_model_three_classes_unfrozen_layers_weighted_v2.h5\"\n",
-    "model_labels_location = path+\"/augmented_model_three_classes_unfrozen_layers_weighted_v2_class_indices.json\"\n",
-    "test_folder = \"/media/romulo/6237-3231/soundflux_stress_testing/spectrograms\""
+    "path = \"/home/nvidia/Downloads\"\n",
+    "model_definition_location = path+\"/augmented_model_three_classes_unfrozen_layers_weighted_v7.json\"\n",
+    "model_weights_location = path+\"/augmented_model_three_classes_unfrozen_layers_weighted_v7.h5\"\n",
+    "model_labels_location = path+\"/augmented_model_three_classes_unfrozen_layers_weighted_v7_class_indices.json\"\n",
+    "test_folder = \"/home/nvidia/Downloads/soundflux_stress_testing/spectrograms\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/romulo/github/pyvenv/soundflux/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From /home/romulo/github/pyvenv/soundflux/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(model_definition_location, 'r') as json_file:\n",
     "    loaded_model_json = json_file.read()\n",
@@ -122,8 +127,7 @@
    "source": [
     "datagen = ImageDataGenerator(rescale=1./255,\n",
     "                            #rotation_range=10,\n",
-    "                            width_shift_range=0.1,\n",
-    "                            #horizontal_flip=True,\n",
+    "                             #horizontal_flip=True,\n",
     "                            #vertical_flip=True,\n",
     "                            fill_mode='nearest')"
    ]
@@ -137,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 3 images belonging to 1 classes.\n"
+      "Found 9 images belonging to 1 classes.\n"
      ]
     }
    ],
@@ -171,7 +175,7 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "1/1 [==============================] - 0s 366ms/step\n"
+      "1/1 [==============================] - 5s 5s/step\n"
      ]
     }
    ],
@@ -205,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 2])"
+       "array([2, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
      "execution_count": 11,
@@ -238,18 +242,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['falling_object', 'falling_object', 'overlay_noise']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['overlay_noise', 'falling_object', 'falling_object', 'falling_object', 'falling_object', 'falling_object', 'falling_object', 'falling_object', 'falling_object']\n",
+      "0.8888888888888888\n"
+     ]
     }
    ],
    "source": [
-    "mapped_results"
+    "print(mapped_results)\n",
+    "print(np.mean([x==\"falling_object\" for x in mapped_results]))"
    ]
   }
  ],
@@ -269,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
