--- a/Sample Recording Notebooks/Sample Recorder - Audio & Vibration.ipynb
+++ b/Sample Recording Notebooks/Sample Recorder - Audio & Vibration.ipynb
@@ -9,6 +9,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -101,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec.save_sample(prefix,_class,metadata=metadata)"
+    "rec.save_sample(prefix,_class,metadata=metadata, base_path='../samples/')"
    ]
   },
   {
@@ -128,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
